# virtual-circus

./: .gitignore  Cargo.toml  README.md  old_build.rs  rustfmt.toml
asset_lib/: Cargo.toml
asset_lib/src/: asset.rs  error.rs  lib.rs  model.rs  pipeline.rs  scene.rs
converter/: Cargo.toml
converter/config/: log4rs.yaml
converter/src/: error.rs  gltf.rs  main.rs  pipeline.rs
shaders/VTC_default/: pipeline.pipmf
virtual-circus/: Cargo.toml
virtual-circus/config/: log4rs.yaml
virtual-circus/shaders/: fragmentShader.frag  fragmentShader.frag.old  vertexShader.vert  vertexShader.vert.old
virtual-circus/src/: framework.rs  main.rs  message_bus.rs  systems.rs  utils.rs  vulkan.rs
virtual-circus/src/framework/: model.rs
virtual-circus/src/framework/model/: gltf.rs
virtual-circus/src/framework/model/gltf/: request.rs
virtual-circus/src/message_bus/: messages.rs
virtual-circus/src/systems/: asset_manager.rs  renderer.rs  scene_manager.rs
virtual-circus/src/utils/: constants.rs  thread.rs  tools.rs
virtual-circus/src/vulkan/: allocator.rs  descriptors.rs  device.rs  elements.rs  rendering_context.rs  rendering_context2.rs  window.rs
virtual-circus/src/vulkan/allocator/: buffer.rs  image.rs
virtual-circus/src/vulkan/descriptors/: global_descriptor_set.rs  material_descriptor_set.rs
virtual-circus/src/vulkan/device/: instance.rs  vertex_input_dynamic_state.rs
virtual-circus/src/vulkan/elements/: command_pool.rs  fence.rs  image_view.rs  pipeline.rs  pipeline_layout.rs  sampler.rs  semaphore.rs  surface.rs  swapchain.rs
