[package]
name = "asset_lib"
version = "0.1.0"
edition = "2021"
description = "A small library for handling asset files in the Virtual Circus project"

[dependencies]
thiserror = "1.0.43"
bincode = "1.3.3"
serde_json = "1.0.108"
zip = "0.6.6"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.nalgebra-glm]
version = "0.18.0"
features = ["serde-serialize"]
