[package]
name = "virtual-circus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3+1.3.251"
gpu-allocator = "0.23.0"
log = "0.4.17"
bincode = "1.3.3"
serde = "1.0.152"
field-offset = "0.3.4"
thiserror = "1.0.43"
gltf = "1.3.0"
bitmask-enum = "2.2.3"
asset_lib = { path = "../asset_lib" }

[dependencies.glfw]
version = "0.45.0"
features = ["vulkan"]

[dependencies.log4rs]
version = "1.2.0"
features = [
  "rolling_file_appender",
  "compound_policy",
  "delete_roller",
  "size_trigger",
]

[dependencies.glam]
version = "0.22.0"
features = ["serde"]

[build-dependencies]
shaderc = "0.8.1"
fs_extra = "1.2.0"
